--- a/redux-anecdotes/package.json
+++ b/redux-anecdotes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unicafe-redux",
+  "name": "redux-anecdotes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,15 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.4",
-    "redux": "^4.0.5"
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-    
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "deep-freeze": "0.0.1"
   }
 }
