--- a/redux-anecdotes/package.json
+++ b/redux-anecdotes/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
   "scripts": {
